--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             direction: rtl;
             font-family: 'Tajawal', sans-serif;
             overflow: hidden;
+            margin: 0;
         }
         .container {
             background: white;
@@ -25,6 +26,8 @@
             transform: translateX(-100%);
             animation: slide-in 1s ease-out forwards;
             position: relative;
+            width: 80%;
+            max-width: 400px;
         }
         @keyframes slide-in {
             from {
@@ -35,7 +38,7 @@
             }
         }
         .message {
-            font-size: 50px;
+            font-size: 2.5rem;
             font-weight: bold;
             color: #D4AF37;
             animation: fade-in 2s ease-in-out;
@@ -65,6 +68,17 @@
             100% {
                 transform: translateY(100vh) rotate(360deg);
                 opacity: 0;
+            }
+        }
+
+        /* Adjustments for mobile screens */
+        @media (max-width: 600px) {
+            .container {
+                padding: 20px;
+                width: 90%;
+            }
+            .message {
+                font-size: 1.8rem;
             }
         }
     </style>
