--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
                 font-size: 1.8rem;
             }
         }
+
+        /* Adding space between the messages */
+        #gift-amount {
+            margin-top: 20px; /* Add margin between the greeting and the gift amount */
+        }
     </style>
 </head>
 <body>
