--- a/index.html
+++ b/index.html
@@ -86,11 +86,25 @@
         #gift-amount {
             margin-top: 20px; /* Add margin between the greeting and the gift amount */
         }
+
+        .reaction {
+            margin: 20px 0; /* Space between reaction images */
+        }
+        .reaction img {
+            width: 70px; /* Adjust size of the image */
+            height: 70px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="message" id="greeting-message">🎉 عيدكم مبارك! 🎊</div>
+        
+        <!-- Single Reaction Image -->
+        <div class="reaction">
+            <img src="https://i.pinimg.com/736x/7a/ed/73/7aed733ecb181eb864751996fe4b7732.jpg" alt="Reaction">
+        </div>
+
         <div class="message" id="gift-amount">💰 عيديتك 0 ريال! 💰</div>
     </div>
     <script>
