--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             margin: 20px 0; /* Space between reaction images */
         }
         .reaction img {
-            width: 70px; /* Adjust size of the image */
-            height: 70px;
+            width: 100px; /* Adjust size of the image (increased size) */
+            height: 100px;
         }
     </style>
 </head>
@@ -102,7 +102,7 @@
         
         <!-- Single Reaction Image -->
         <div class="reaction">
-            <img src="https://i.pinimg.com/736x/7a/ed/73/7aed733ecb181eb864751996fe4b7732.jpg" alt="Reaction">
+            <img src="https://i.pinimg.com/originals/c2/96/12/c296120e7b93c7f9a3b1a0b1586e466f.png" alt="Reaction">
         </div>
 
         <div class="message" id="gift-amount">💰 عيديتك 0 ريال! 💰</div>
